src/objects/inscor__Owner_Code__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Accrued_Cost__c</fullName>
        <label>Accrued Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Acquisition_Cost__c</fullName>
        <label>Acquisition Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Acquisition_Date__c</fullName>
        <label>Acquisition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>inscor__Adjustment_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adjustment Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Owner Codes (Adjustment Account)</relationshipLabel>
        <relationshipName>Owner_Codes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Allow_Negative_Remaining_Cost__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Negative Remaining Cost?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Available_for_Sale__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Available for Sale?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Business_Category__c</fullName>
        <label>Business Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Business_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Chargeout_Rate__c</fullName>
        <label>Chargeout Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Owner Codes</relationshipLabel>
        <relationshipName>Owner_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Consignment_Rate__c</fullName>
        <label>Consignment Rate</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inscor__Consignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consignment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Consignor_Payable_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consignor Payable Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Owner Codes (Consignor Payable Account)</relationshipLabel>
        <relationshipName>Owner_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Owner Codes</relationshipLabel>
        <relationshipName>Owner_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Default_Consignor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Consignor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Owner Codes</relationshipLabel>
        <relationshipName>Owner_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Engine_Serial_Number__c</fullName>
        <label>MSN/ESN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Exchange_Core_Repair_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exchange Core Repair Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Owner Codes (Exchange Core Repair Account)</relationshipLabel>
        <relationshipName>Owner_Codes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Exchange_Part_Writedown__c</fullName>
        <label>Exchange Part Writedown %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>inscor__Expense_Account_Acq__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense Account-Acq</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Owner Codes (Expense Account-Acq)</relationshipLabel>
        <relationshipName>Owner_Codes3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Expense_Account_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Expense Account-Rep</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Owner Codes (Expense Account-Rep)</relationshipLabel>
        <relationshipName>Owner_Codes4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Hide_from_Services1__c</fullName>
        <label>Hide from Services</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Hide_From_Services</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Hide_from_Services__c</fullName>
        <label>Hide from Services - RETIRED</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ILS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__ILS_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>ILS Visible? - RETIRED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Incident_Related__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incident Related?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Inventory_Account_Acq__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Account-Acq</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Owner Codes (Inventory Account-Acq)</relationshipLabel>
        <relationshipName>Owner_Codes5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Inventory_Account_Rep__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Account-Rep</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Owner Codes (Inventory Account-Rep)</relationshipLabel>
        <relationshipName>Owner_Codes6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Lot_Inv_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use the Inv-ID for the Main Inventory Line for the LOT. Inv Line needs to be Protected, Qty=1, and PN should be from LOT PO line 1 if created already. Acq Cost of Inv will be kept in sync with the Remaining Cost on this Owner Code.</inlineHelpText>
        <label>Lot Inv Id</label>
        <referenceTo>inscor__Inventory_Line__c</referenceTo>
        <relationshipLabel>Owner Codes</relationshipLabel>
        <relationshipName>Owner_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Lot_Purchase__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lot Code?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Move_Repair_Cost_to_Accrual__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, repair costs will be added to the Accrued Cost instead of being added to the individual Inventory Lines.</inlineHelpText>
        <label>Move Repair Cost to Accrual?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Move_Repair_Cost_to_LOT__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, repair costs will be added to the LOT Remaining Cost instead of being added to the individual Inventory Lines.</inlineHelpText>
        <label>Move Repair Cost to LOT?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Owner_Code_Description__c</fullName>
        <label>Owner Code Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Owner_Group__c</fullName>
        <label>Owner Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Owner_Group</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Parent_LOT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent LOT</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>inscor__Owner_Code__c.inscor__Lot_Purchase__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>inscor__Owner_Code__c</referenceTo>
        <relationshipLabel>Owner Codes</relationshipLabel>
        <relationshipName>Owner_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Gen</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Remaining_Cost__c</fullName>
        <label>Remaining Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscor__Revenue_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Account</label>
        <referenceTo>inscor__GL_Account__c</referenceTo>
        <relationshipLabel>Owner Codes (Revenue Account)</relationshipLabel>
        <relationshipName>Owner_Codes7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Total_Sublot_Cost__c</fullName>
        <label>Total Sublot Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>inscoras__GL_Variable_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Variable 1</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 1</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Owner Codes</relationshipLabel>
        <relationshipName>Owner_Codes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscoras__GL_Variable_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Variable 2</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 2</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Owner Codes (GL Variable 2)</relationshipLabel>
        <relationshipName>Owner_Codes1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscoras__GL_Variable_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GL Variable 3</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Accounting_Variable__c.AcctSeed__Type__c</field>
                <operation>equals</operation>
                <value>GL Account Variable 3</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Accounting_Variable__c</referenceTo>
        <relationshipLabel>Owner Codes (GL Variable 3)</relationshipLabel>
        <relationshipName>Owner_Codes2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Owner Code</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Owner_Code_Description__c</columns>
        <columns>inscor__Product_Line__c</columns>
        <columns>inscor__Lot_Purchase__c</columns>
        <columns>inscor__Consignment__c</columns>
        <columns>inscor__Available_for_Sale__c</columns>
        <columns>inscor__Acquisition_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>inscor__SubLots_Setup</fullName>
        <columns>NAME</columns>
        <columns>inscor__Owner_Code_Description__c</columns>
        <columns>inscor__Parent_LOT__c</columns>
        <columns>inscor__Owner_Group__c</columns>
        <columns>inscor__Lot_Purchase__c</columns>
        <columns>inscor__Acquisition_Date__c</columns>
        <columns>inscor__Acquisition_Cost__c</columns>
        <columns>inscor__Remaining_Cost__c</columns>
        <columns>inscor__Total_Sublot_Cost__c</columns>
        <columns>inscor__Chargeout_Rate__c</columns>
        <columns>inscor__Allow_Negative_Remaining_Cost__c</columns>
        <columns>inscor__Inventory_Account_Acq__c</columns>
        <columns>inscor__Inventory_Account_Rep__c</columns>
        <columns>inscor__Adjustment_Account__c</columns>
        <columns>inscor__Lot_Inv_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>inscor__Lot_Purchase__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>SubLots Setup</label>
    </listViews>
    <nameField>
        <label>Owner Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Owner Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>inscor__Acquisition_Cost_In_Parent_LOT_Case</fullName>
        <active>true</active>
        <description>Acquisition Cost must =0 When SubLot</description>
        <errorConditionFormula>AND(BLANKVALUE( inscor__Acquisition_Cost__c , 0) != 0, 
NOT(ISBLANK( inscor__Parent_LOT__c)))</errorConditionFormula>
        <errorMessage>Acquisition Cost must be zero in Sublots. Acquisition Cost is stored at the Parent.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Consignment_Not_Requirements</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(  inscor__Consignment__c = true, 
OR
(
NOT(ISBLANK(inscor__Acquisition_Cost__c )),
NOT(ISBLANK(inscor__Acquisition_Date__c)),
NOT(ISBLANK(inscor__Chargeout_Rate__c)),
NOT(ISBLANK(inscor__Remaining_Cost__c))
 ))</errorConditionFormula>
        <errorMessage>Acquisition cost, Acquisition Date, Chargeout Rate, and Remaining Cost are not required for Consignment Owner Code.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Consignment_Requirements</fullName>
        <active>true</active>
        <errorConditionFormula>AND( inscor__Consignment__c = true ,ISBLANK( inscor__Consignment_Rate__c ))</errorConditionFormula>
        <errorMessage>Consignment rate is required for Consignment Owner Codes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Lot_Not_Requirements</fullName>
        <active>true</active>
        <errorConditionFormula>AND( inscor__Lot_Purchase__c = true ,NOT(ISBLANK( inscor__Consignment_Rate__c )))</errorConditionFormula>
        <errorMessage>Consignment rate is not required for LOT Owner Codes</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Lot_Purchase_Requirements</fullName>
        <active>true</active>
        <errorConditionFormula>AND
( inscor__Lot_Purchase__c = true, 
OR
(
ISBLANK(inscor__Acquisition_Cost__c ),
ISBLANK(inscor__Acquisition_Date__c),
ISBLANK(inscor__Chargeout_Rate__c),
ISBLANK(inscor__Remaining_Cost__c)
 ))</errorConditionFormula>
        <errorMessage>Acquisition Cost, Acquisition Date, Chargeout Rate, and Remaining Cost must all be filled in and cannot be left blank for LOT Owner Codes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Not_Consignment_and_Lot</fullName>
        <active>true</active>
        <errorConditionFormula>AND( inscor__Consignment__c =true, inscor__Lot_Purchase__c =true)</errorConditionFormula>
        <errorMessage>Owner code cannot be both Consignment and a LOT</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Parent_Needed_for_Negative_Rem_Cost</fullName>
        <active>true</active>
        <description>Parent field cannot be blank when &quot;Allow to go Negative&quot;=True</description>
        <errorConditionFormula>ISBLANK(inscor__Parent_LOT__c) &amp;&amp;  inscor__Allow_Negative_Remaining_Cost__c == true</errorConditionFormula>
        <errorDisplayField>inscor__Allow_Negative_Remaining_Cost__c</errorDisplayField>
        <errorMessage>Only sublots are allowed to go negative in the remaining costs.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Repair_Cost_to_Accural_If_Consign_True</fullName>
        <active>true</active>
        <description>Move Repair Cost to Accrual? checkbox can only be true if Consignment is checked.</description>
        <errorConditionFormula>inscor__Consignment__c = false &amp;&amp;  inscor__Move_Repair_Cost_to_Accrual__c = true</errorConditionFormula>
        <errorMessage>Move Repair Cost to Accrual? can only be true if Consignment is true.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Repair_Cost_to_Remaining_If_Lot_True</fullName>
        <active>true</active>
        <description>Move Repair Cost to LOT? checkbox can only be true if Lot Code is checked.</description>
        <errorConditionFormula>inscor__Lot_Purchase__c = false &amp;&amp;   inscor__Move_Repair_Cost_to_LOT__c = true</errorConditionFormula>
        <errorMessage>Move Repair Cost to LOT? can only be true if Lot Code is true.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Require_Default_Consignor</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(inscor__Default_Consignor__c) &amp;&amp;  inscor__Consignment__c = true</errorConditionFormula>
        <errorDisplayField>inscor__Default_Consignor__c</errorDisplayField>
        <errorMessage>Default Consignor is required when &quot;Consignment?&quot; is checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscoras__Cons_GL_Account_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
inscor__Consignment__c, 
inscor__Inventory_Account_Acq__c  =  inscor__Inventory_Account_Rep__c  
)</errorConditionFormula>
        <errorMessage>For Cons Owner Codes, Inventory Accounts should be different.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscoras__LOT_GL_Account_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
inscor__Lot_Purchase__c,
inscor__Inventory_Account_Acq__c = inscor__Inventory_Account_Rep__c  
)</errorConditionFormula>
        <errorMessage>For LOT Owner Codes, Inventory GL Accounts should be different.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscoras__SPEC_Owner_Code_validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
NOT(inscor__Consignment__c),
NOT(inscor__Lot_Purchase__c),
OR(
inscor__Expense_Account_Acq__c  &lt;&gt; inscor__Expense_Account_Rep__c,
inscor__Inventory_Account_Acq__c  &lt;&gt; inscor__Inventory_Account_Rep__c  
) 
)</errorConditionFormula>
        <errorMessage>For Spec Owner Codes, both Inventory and Expense GL Accounts should be the same.</errorMessage>
    </validationRules>
</CustomObject>